--- a/dataset-converters/dataset-converters.csproj
+++ b/dataset-converters/dataset-converters.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2164C4AE-1513-4D77-8E2D-8EC6645A4772}</ProjectGuid>
+    <ProjectGuid>{4403E05A-5D49-4D31-B686-7FC0A1D305BC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>dataset_comparer_engine</RootNamespace>
-    <AssemblyName>dataset-comparer-engine</AssemblyName>
+    <RootNamespace>dataset_converters</RootNamespace>
+    <AssemblyName>dataset-converters</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,8 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CorrelationalDataSetComparer.cs" />
-    <Compile Include="IDataSetComparer.cs" />
+    <Compile Include="CsvToDataSetConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
